[tool.poetry]
name = "onlinesum"
version = "0.1.0"
description = ""
authors = ["Tomoaki Nakamura <tyo_yo@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyNaCl = "^1.4.0"
google-cloud-speech = "^2.6.0"
grpcio = "^1.39.0"
aiohttp = ">=3.6.0,<3.7.0"
websockets = ">=6.0,!=7.0,!=8.0,!=8.0.1,<9.0"
numpy = "^1.21.1"
av = "^8.0.3"
deepspeech = "^0.9.3"
pydub = "^0.25.1"
streamlit = "^0.86.0"
streamlit-webrtc = "^0.26.0"

[tool.poetry.dev-dependencies]
pysen = {extras = ["lint"], version = "^0.9.1"}
pytest = "^6.2.4"
jupyterlab = "^3.1.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
